--- a/calculator.html
+++ b/calculator.html
@@ -32,26 +32,31 @@
                             <td><button onclick="result('1')">1</button></td>
                             <td><button onclick="result(2)">2</button></td>
                             <td><button onclick="result(3)">3</button></td>
-                            <td><button onclick="result('+')">+</button></td>
+                            <td><button onclick="del()">DEL</button></td>
                         </tr>
                         <tr>
                             <td><button onclick="result(4)">4</button></td>
                             <td><button onclick="result(5)">5</button></td>
                             <td><button onclick="result(6)">6</button></td>
-                            <td><button onclick="result('-')">-</button></td>
+                            <td><button onclick="result('+')">+</button></td>
                         </tr>
                         <tr>
                             <td><button onclick="result(7)">7</button></td>
                             <td><button onclick="result(8)">8</button></td>
                             <td><button onclick="result(9)">9</button></td>
-                            <td><button onclick="result('*')">*</button></td>
+                            <td><button onclick="result('-')">-</button></td>
                         </tr>
                         <tr>
-                            <td><button onclick="result('.')">.</button></td>
+                            <td><button onclick="result('*')">*</button></td>
                             <td><button onclick="result(0)">0</button></td>
-                            <td><button onclick="result('%')">%</button></td>
-                            <td><button onclick="cal()">=</button></td>
+                            <td><button onclick="result('#')">#</button></td>
+                            <td><button onclick="result(/)">/</button></td>
                         </tr>
+                        <tr>
+                          <td><button onclick="result('%')">%</button></td>
+                          <td><button onclick="result(.)">.</button></td>
+                          <td colspan="2"><button onclick="cal()" class="equal">=</button></td>
+                      </tr>
                     </table>
                 
             </div>
